<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home_fragment">

    <fragment
        android:id="@+id/navigation_main_quizz"
        android:name="com.example.quizzapp.ui.fragments.mainQuizz.MainQuizzFragment"
        android:label="@string/title_main_quizz"
        tools:layout="@layout/fragment_main_quizz" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.quizzapp.ui.fragments.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.quizzapp.ui.fragments.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.quizzapp.ui.fragments.homeFragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
</navigation>
