<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.settings.SettingsFragment">

    <View
        style="@style/ViewDividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/text_settings_share_this_app"
        style="@style/TextSettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_settings_share_this_app"
        android:textColor="@color/Black"
        app:drawableEndCompat="@drawable/icon_right_arrow" />

    <View
        style="@style/ViewDividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/text_settings_rate_us"
        style="@style/TextSettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_settings_rate_us"
        android:textColor="@color/Black"
        app:drawableEndCompat="@drawable/icon_right_arrow" />

    <View
        style="@style/ViewDividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/text_settings_leave_feedback"
        style="@style/TextSettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_settings_leave_feedback"
        android:textColor="@color/Black"
        app:drawableEndCompat="@drawable/icon_right_arrow" />

    <View
        style="@style/ViewDividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/text_settings_clear_history"
        style="@style/TextSettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_settings_clear_history"
        android:textColor="@color/Heliotrope"
        app:drawableEndCompat="@drawable/icon_right_arrow" />

    <View
        style="@style/ViewDividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|bottom"
        android:text="@string/version_app"
        android:textColor="@color/Gray"
        android:textSize="12sp" />


</LinearLayout>